Make `git rebase` safer

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,10 @@
 	attributesfile = ~/.gitattributes
 	excludesfile = ~/.gitignore
 
+	# Make `git rebase` safer on macOS
+	# More info: http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/
+	trustctime = false
+
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path =
