--- a/.gitconfig
+++ b/.gitconfig
@@ -40,6 +40,7 @@
 	commend = "commit --amend --no-edit"
 	brm = "!f() { git rebase -i HEAD~$1; }; f"
 	st = "stash"
+	pop = "stash pop"
 	fm = "!f() { git log --decorate --oneline --date=short --grep=$1; }; f"
 
 [color]
