--- a/.gitconfig
+++ b/.gitconfig
@@ -39,9 +39,9 @@
 	cm = "commit -m"
 	amend = "commit --amend"
 	commend = "commit --amend --no-edit"
-	brm = "!f() { git rebase -i HEAD~$1; }; f"
 	st = "stash"
 	pop = "stash pop"
+	ri = "!f() { git rebase -i HEAD~$1; }; f"
 	fm = "!f() { git log --decorate --oneline --date=short --grep=$1; }; f"
 
 [color]
